создание шапки страницы

--- a/index.html
+++ b/index.html
@@ -4,7 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section">
+      <div class="grid-container-header">
+        <nav class="header__menu">
+          <ul class="header__links-list">
+            <li
+              class="header__links-list-item header__links-list-item_no-bullit header__link_active"
+            >
+              <a class="header__link" href="#0">главная</a>
+            </li>
+            <li class="header__links-list-item">
+              <a class="header__link" href="#0">посмотреть лоты</a>
+            </li>
+            <li class="header__links-list-item">
+              <a class="header__link" href="#0">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__logo">
+          <img
+            class="header__logo-image"
+            src="./images/logo-black.svg"
+            alt="логотип оно тебе надо"
+            >
+        </div>
+        <div class="address">
+          <ul class="addres-list">
+            <li class="address-list-item">
+              <a 
+                class="border-bottom-address address-list-item-contats" 
+                href="tel:+99995555555">+9 999 555 5555
+              </a>
+            </li>
+            <li class="address-list-item">
+              <a 
+                class="border-bottom-address address-list-item-contats" 
+                class="border-bottom-address" 
+                href="mailto:info@sobaka.ge">info@sobaka.ge
+              </a>
+            </li>
+            <li class="address-list-item">
+              <address class="address-list-item-contats">
+                наб. Принсенграхт 263-265, Амстердам
+              </address>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="cover content-section"></section>
+      <section class="lots content-section"></section>
+      <section class="about content-section"></section>
+    </main>
+    <footer class="footer content-section"></footer>
+  </body>
 </html>
