--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -14,9 +14,7 @@
       <div class="grid-container-header">
         <nav class="header__menu">
           <ul class="header__links-list">
-            <li
-              class="header__links-list-item header__links-list-item_no-bullit header__link_active"
-            >
+            <li class="header__links-list-item header__links-list-item_no-bullit header__link_active">
               <a class="header__link" href="#0">главная</a>
             </li>
             <li class="header__links-list-item">
@@ -32,21 +30,22 @@
             class="header__logo-image"
             src="./images/logo-black.svg"
             alt="логотип оно тебе надо"
-            >
+          >
         </div>
         <div class="address">
           <ul class="addres-list">
             <li class="address-list-item">
-              <a 
-                class="border-bottom-address address-list-item-contats" 
-                href="tel:+99995555555">+9 999 555 5555
+              <a
+                class="border-bottom-address address-list-item-contats"
+                href="tel:+99995555555"
+                >+9 999 555 5555
               </a>
             </li>
             <li class="address-list-item">
-              <a 
-                class="border-bottom-address address-list-item-contats" 
-                class="border-bottom-address" 
-                href="mailto:info@sobaka.ge">info@sobaka.ge
+              <a
+                class="border-bottom-address address-list-item-contats"
+                href="mailto:info@sobaka.ge"
+                >info@sobaka.ge
               </a>
             </li>
             <li class="address-list-item">
@@ -59,7 +58,29 @@
       </div>
     </header>
     <main>
-      <section class="cover content-section"></section>
+      <section class="cover-image cover content-section">
+        <div class="overlay"></div>
+        <div class="cover-content">
+          <h1 class="cover__title">
+            <span class="aligned-text">о<span class="letter-spacing-extended">н</span>о</span>
+            <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span>
+            </span>
+            <span class="aligned-text aligned-text_right">
+              <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+            </span>
+          </h1>
+          <div class="cover__description">
+            <h2 class="cover__description-text">
+              Аукцион вещей, в которые никто
+              <span class="word-spacing-extended">не</span>
+              верил
+            </h2>
+            <button class="bet-button">
+              <a class="bet-button-text" href="#0">Сделать ставку</a>
+            </button>
+          </div>
+        </div>
+      </section>
       <section class="lots content-section"></section>
       <section class="about content-section"></section>
     </main>
