--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             </li>
           </ul>
         </nav>
-        <div class="header__logo">
+        <a class="header__logo" href="#0">
           <img
             class="header__logo-image"
             src="./images/logo-black.svg"
             alt="черный логотип оно тебе надо"
           >
-        </div>
+        </a>
         <div class="address">
           <ul class="addres-list">
             <li class="address-list-item">
@@ -78,9 +78,9 @@
               <span class="word-spacing-extended">не</span>
               верил
             </h2>
-            <button class="bet-button">
-              <a class="bet-button-text" href="#0">Сделать ставку</a>
-            </button>
+              <a class="bet-button bet-button-text" href="#0">
+                Сделать ставку
+              </a>
           </div>
         </div>
       </section>
