--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body>
-    <header class="header content-section">
-      <div class="grid-container">
+  <body class="body">
+    <header class="header content-section grid-container">
         <nav class="header__menu">
-          <ul class="header__links-list">
-            <li class="header__links-list-item header__links-list-item_no-bullit header__link_active">
-              <a class="header__link" href="#0">главная</a>
+              <a class="header__link_active" href="#0">
+                главная
+              </a>
+            <ul class="header__links-list">
+            <li class="header__links-list-item">
+              <a class="header__link" href="#0">
+                посмотреть лоты
+              </a>
             </li>
             <li class="header__links-list-item">
-              <a class="header__link" href="#0">посмотреть лоты</a>
-            </li>
-            <li class="header__links-list-item">
-              <a class="header__link" href="#0">об аукционе</a>
+              <a class="header__link" href="#0">
+                об аукционе
+              </a>
             </li>
           </ul>
         </nav>
@@ -32,35 +35,28 @@
             alt="черный логотип оно тебе надо"
           >
         </a>
-        <div class="address">
+        <address class="address">
           <ul class="addres-list">
             <li class="address-list-item">
-              <a
-                class="address-list-item-contats border-bottom-address"
-                href="tel:+99995555555"
-                >+9 999 555 5555
+              <a class="address-list-item-contats border-bottom-address" href="tel:+99995555555">
+                +9 999 555 5555
               </a>
             </li>
             <li class="address-list-item">
-              <a
-                class="address-list-item-contats border-bottom-address"
-                href="mailto:info@sobaka.ge"
-                >info@sobaka.ge
+              <a class="address-list-item-contats border-bottom-address" href="mailto:info@sobaka.ge">
+                info@sobaka.ge
               </a>
             </li>
             <li class="address-list-item">
-              <address class="address-list-item-contats">
+              <p class="address-list-item-contats">
                 наб. Принсенграхт 263-265, Амстердам
-              </address>
+              </p>
             </li>
           </ul>
-        </div>
-      </div>
+        </address>
     </header>
     <main>
-      <section class="cover-image cover content-section">
-        <div class="overlay"></div>
-        <div class="cover-content">
+      <section class="cover cover-image content-section">
           <h1 class="cover__title">
             <span class="aligned-text">
               о<span class="letter-spacing-extended">н</span>о
@@ -70,47 +66,47 @@
             </span>
             <span class="aligned-text aligned-text_right">
               <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
-          </span>
+            </span>
           </h1>
           <div class="cover__description">
-            <h2 class="cover__description-text">
-              Аукцион вещей, в которые никто
-              <span class="word-spacing-extended">не</span>
+            <div class="cover__description-text">
+              <p>
+                Аукцион вещей, в которые никто не
+              </p>
+              <p>
               верил
-            </h2>
+              </p>
+            </div>
               <a class="bet-button bet-button-text" href="#0">
                 Сделать ставку
               </a>
           </div>
-        </div>
       </section>
-      <article class="lots content-section">
-        <h3 class="lots__heading">
+      <section class="lots content-section">
+        <h2 class="lots__heading">
           Лоты
-        </h3>
+        </h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <div class="card card_type_film">
-                <div class="overlay"></div>
-                <h4 class="card__title">
+              <article class="card card_type_film card_type-image">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h4>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
                 </p>
-              </div>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <div class="card card_type_book">
-                <div class="overlay"></div>
-                <h4 class="card__title">
+              <article class="card card_type_book card_type-image">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h4>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -119,16 +115,15 @@
                   эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                   Джеймса Джойса?
                 </p>
-              </div>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
-              <div class="card card_type_picture">
-                <div class="overlay"></div>
-                <h4 class="card__title">
+              <article class="card card_type_picture card_type-image">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h4>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -136,12 +131,14 @@
                   на такое поставили, если бы не знали, что это — одна из
                   революционных работ Кандинского?
                 </p>
-              </div>
+              </article>
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
-      </article>
+        <a class="lots__look-more-link" href="#0">
+          посмотреть больше
+        </a>
+      </section>
       <section class="about content-section about__column">
         <div class="about_logo">
           <div class="background_logo">
@@ -153,7 +150,9 @@
           </div>
         </div>
         <div class="about_description">
-          <h5 class="about__title">Об аукционе</h5>
+          <h2 class="about__title">
+            Об аукционе
+          </h2>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -175,41 +174,42 @@
         </div>
       </section>
     </main>
-    <footer class="footer content-section">
-      <div class="grid-container">
-        <div class="address addres_no-padding">
+    <footer class="footer content-section grid-container">
+        <address class="address addres_no-padding">
           <ul class="addres-list">
             <li class="address-list-item">
-              <a
-                class="address-list-item-contats border-bottom-address"
-                href="tel:+99995555555"
-                >+9 999 555 5555
+              <a class="address-list-item-contats border-bottom-address" href="tel:+99995555555">
+                +9 999 555 5555
               </a>
             </li>
             <li class="address-list-item">
-              <a
-                class="address-list-item-contats border-bottom-address"
-                href="mailto:info@sobaka.ge"
-                >info@sobaka.ge
+              <a class="address-list-item-contats border-bottom-address" href="mailto:info@sobaka.ge">
+                info@sobaka.ge
               </a>
             </li>
             <li class="address-list-item">
-              <address class="address-list-item-contats">
+              <p class="address-list-item-contats">
                 наб. Принсенграхт 263-265, Амстердам
-              </address>
+              </p>
             </li>
           </ul>
-        </div>
+        </address>
         <nav class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-list-item footer__link_active">
-              <a class="footer__menu-link" href="#0">главная</a>
+              <a class="footer__menu-link" href="#0">
+                главная
+              </a>
             </li>
             <li class="footer__menu-list-item">
-              <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+              <a class="footer__menu-link" href="#0">
+                посмотреть лоты
+              </a>
             </li>
             <li class="footer__menu-list-item">
-              <a class="footer__menu-link" href="#0">об аукционе</a>
+              <a class="footer__menu-link" href="#0">
+                об аукционе
+              </a>
             </li>
           </ul>
         </nav>
