--- a/index.html
+++ b/index.html
@@ -11,84 +11,106 @@
   </head>
   <body class="body">
     <header class="header content-section grid-container">
-        <nav class="header__menu">
-              <a class="header__link_active" href="#0">
-                главная
-              </a>
-            <ul class="header__links-list">
-            <li class="header__links-list-item">
-              <a class="header__link" href="#0">
-                посмотреть лоты
-              </a>
-            </li>
-            <li class="header__links-list-item">
-              <a class="header__link" href="#0">
-                об аукционе
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <a class="header__logo" href="#0">
-          <img
-            class="header__logo-image"
-            src="./images/logo-black.svg"
-            alt="черный логотип оно тебе надо"
-          >
-        </a>
-        <address class="address">
-          <ul class="addres-list">
-            <li class="address-list-item">
-              <a class="address-list-item-contats border-bottom-address" href="tel:+99995555555">
-                +9 999 555 5555
-              </a>
-            </li>
-            <li class="address-list-item">
-              <a class="address-list-item-contats border-bottom-address" href="mailto:info@sobaka.ge">
-                info@sobaka.ge
-              </a>
-            </li>
-            <li class="address-list-item">
-              <p class="address-list-item-contats">
-                наб. Принсенграхт 263-265, Амстердам
-              </p>
-            </li>
-          </ul>
-        </address>
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item_no-bullit">
+            <a  
+              class="header__link_active" 
+              href="#0"
+            >
+              главная
+            </a>
+          </li>
+          <li class="header__links-list-item">
+            <a 
+              class="header__link" 
+              href="#0"
+            >
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="header__links-list-item">
+            <a 
+              class="header__link" 
+              href="#0"
+            >
+              об аукционе
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <a 
+        class="header__logo" 
+        href="#0"
+      >
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="черный логотип оно тебе надо"
+        >
+      </a>
+      <address class="address">
+        <ul class="addres-list">
+          <li class="address-list-item">
+            <a
+              class="address-list-item-contats border-bottom-address"
+              href="tel:+99995555555"
+            >
+              +9 999 555 5555
+            </a>
+          </li>
+          <li class="address-list-item">
+            <a
+              class="address-list-item-contats border-bottom-address"
+              href="mailto:info@sobaka.ge"
+            >
+              info@sobaka.ge
+            </a>
+          </li>
+          <li class="address-list-item">
+            <p class="address-list-item-contats">
+              наб. Принсенграхт 263-265, Амстердам
+            </p>
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
       <section class="cover cover-image content-section">
-          <h1 class="cover__title">
-            <span class="aligned-text">
-              о<span class="letter-spacing-extended">н</span>о
-            </span>
-            <span class="aligned-text aligned-text_center">
-              те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span>
-            </span>
-            <span class="aligned-text aligned-text_right">
-              <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
-            </span>
-          </h1>
-          <div class="cover__description">
-            <div class="cover__description-text">
-              <p>
-                Аукцион вещей, в которые никто не
-              </p>
-              <p>
-              верил
-              </p>
-            </div>
-              <a class="bet-button bet-button-text" href="#0">
-                Сделать ставку
-              </a>
-          </div>
+        <h1 class="cover__title">
+          <span class="aligned-text">
+            о<span class="letter-spacing-extended">н</span>о
+          </span>
+          <span class="aligned-text aligned-text_center">
+            те<span class="letter-spacing-extended">б</span>
+            <span class="no-letter-spacing">е</span>
+          </span>
+          <span class="aligned-text aligned-text_right">
+            <span class="letter-spacing-extended">н</span>ад
+            <span class="no-letter-spacing">о</span>
+          </span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто
+            <span class="cover__description-word-spacing">не верил</span>
+          </p>
+          <a 
+            class="bet-button bet-button-text" 
+            href="#0"
+          >
+            Сделать ставку
+          </a>
+        </div>
       </section>
       <section class="lots content-section">
-        <h2 class="lots__heading">
-          Лоты
-        </h2>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
+            <a 
+              class="card-link" 
+              href="#0"
+            >
               <article class="card card_type_film card_type-image">
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
@@ -102,7 +124,10 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
+            <a 
+              class="card-link" 
+              href="#0"
+            >
               <article class="card card_type_book card_type-image">
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
@@ -119,7 +144,10 @@
             </a>
           </li>
           <li class="lots__card-list-item">
-            <a class="card-link" href="#0">
+            <a 
+              class="card-link" 
+              href="#0"
+            >
               <article class="card card_type_picture card_type-image">
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
@@ -135,7 +163,10 @@
             </a>
           </li>
         </ul>
-        <a class="lots__look-more-link" href="#0">
+        <a 
+          class="lots__look-more-link" 
+          href="#0"
+        >
           посмотреть больше
         </a>
       </section>
@@ -146,13 +177,11 @@
               class="about_logo-image"
               src="./images/logo-white.svg"
               alt="белый логотип оно тебе надо"
-            />
+            >
           </div>
         </div>
         <div class="about_description">
-          <h2 class="about__title">
-            Об аукционе
-          </h2>
+          <h2 class="about__title">Об аукционе</h2>
           <div class="about__text">
             <p>
               Здесь вы не встретите очередное пафосное собрание невероятно
@@ -175,73 +204,97 @@
       </section>
     </main>
     <footer class="footer content-section grid-container">
-        <address class="address addres_no-padding">
-          <ul class="addres-list">
-            <li class="address-list-item">
-              <a class="address-list-item-contats border-bottom-address" href="tel:+99995555555">
-                +9 999 555 5555
-              </a>
-            </li>
-            <li class="address-list-item">
-              <a class="address-list-item-contats border-bottom-address" href="mailto:info@sobaka.ge">
-                info@sobaka.ge
-              </a>
-            </li>
-            <li class="address-list-item">
-              <p class="address-list-item-contats">
-                наб. Принсенграхт 263-265, Амстердам
-              </p>
-            </li>
-          </ul>
-        </address>
-        <nav class="footer__menu">
-          <ul class="footer__menu-list">
-            <li class="footer__menu-list-item footer__link_active">
-              <a class="footer__menu-link" href="#0">
-                главная
-              </a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a class="footer__menu-link" href="#0">
-                посмотреть лоты
-              </a>
-            </li>
-            <li class="footer__menu-list-item">
-              <a class="footer__menu-link" href="#0">
-                об аукционе
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="footer__social-list">
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img
-                class="footer__social-icon"
-                src="./images/yt.svg"
-                alt="иконка Ютуб"
-              >
+      <address class="address addres_no-padding">
+        <ul class="addres-list">
+          <li class="address-list-item">
+            <a
+              class="address-list-item-contats border-bottom-address"
+              href="tel:+99995555555"
+            >
+              +9 999 555 5555
             </a>
           </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img
-                class="footer__social-icon"
-                src="./images/vk.svg"
-                alt="иконка ВК"
-              >
+          <li class="address-list-item">
+            <a
+              class="address-list-item-contats border-bottom-address"
+              href="mailto:info@sobaka.ge"
+            >
+              info@sobaka.ge
             </a>
           </li>
-          <li class="footer__social-list-item">
-            <a class="footer__social-link" href="#0">
-              <img
-                class="footer__social-icon"
-                src="./images/pinterest.svg"
-                alt="иконка пинтерест"
-              >
+          <li class="address-list-item">
+            <p class="address-list-item-contats">
+              наб. Принсенграхт 263-265, Амстердам
+            </p>
+          </li>
+        </ul>
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a 
+              class="footer__menu-link footer__link_active" 
+              href="#0"
+            >
+              главная
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a 
+              class="footer__menu-link" 
+              href="#0"
+            >
+              посмотреть лоты
+            </a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a 
+              class="footer__menu-link" 
+              href="#0"
+            >
+              об аукционе
             </a>
           </li>
         </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a 
+            class="footer__social-link" 
+            href="#0"
+          >
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="иконка Ютуб"
+            >
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a 
+            class="footer__social-link" 
+            href="#0"
+          >
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="иконка ВК"
+            >
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a 
+            class="footer__social-link" 
+            href="#0"
+          >
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="иконка пинтерест"
+            >
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
