--- a/index.html
+++ b/index.html
@@ -78,16 +78,12 @@
     <main>
       <section class="cover cover-image content-section">
         <h1 class="cover__title">
-          <span class="aligned-text">
-            о<span class="letter-spacing-extended">н</span>о
-          </span>
+          <span class="aligned-text">о<span class="letter-spacing-extended">н</span>о</span>
           <span class="aligned-text aligned-text_center">
-            те<span class="letter-spacing-extended">б</span>
-            <span class="no-letter-spacing">е</span>
+            те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span>
           </span>
           <span class="aligned-text aligned-text_right">
-            <span class="letter-spacing-extended">н</span>ад
-            <span class="no-letter-spacing">о</span>
+            <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
           </span>
         </h1>
         <div class="cover__description">
@@ -96,7 +92,7 @@
             <span class="cover__description-word-spacing">не верил</span>
           </p>
           <a 
-            class="bet-button bet-button-text" 
+            class="bet-button" 
             href="#0"
           >
             Сделать ставку
@@ -111,7 +107,7 @@
               class="card-link" 
               href="#0"
             >
-              <article class="card card_type_film card_type-image">
+              <article class="card card_type_film">
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -128,7 +124,7 @@
               class="card-link" 
               href="#0"
             >
-              <article class="card card_type_book card_type-image">
+              <article class="card card_type_book">
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -148,7 +144,7 @@
               class="card-link" 
               href="#0"
             >
-              <article class="card card_type_picture card_type-image">
+              <article class="card card_type_picture">
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
